--- a/Mobile Application II Project/Base.lproj/Main.storyboard
+++ b/Mobile Application II Project/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Mhg-Vb-ZtO">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Mhg-Vb-ZtO">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -109,10 +109,10 @@
             </objects>
             <point key="canvasLocation" x="717" y="434"/>
         </scene>
-        <!--List of statements-->
+        <!--Statement list-->
         <scene sceneID="5T0-NO-yew">
             <objects>
-                <viewController id="ARR-2o-yzX" sceneMemberID="viewController">
+                <viewController title="Statement list" id="ARR-2o-yzX" customClass="StatementsTVC" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="mcx-dR-uki"/>
                         <viewControllerLayoutGuide type="bottom" id="tqP-fD-tYG"/>
@@ -132,7 +132,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="75X-F7-8Oe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="260" y="-252"/>
+            <point key="canvasLocation" x="372" y="-270"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="1S0-iz-gy5">
