--- a/Mobile Application II Project/Base.lproj/Main.storyboard
+++ b/Mobile Application II Project/Base.lproj/Main.storyboard
@@ -132,7 +132,36 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="75X-F7-8Oe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="372" y="-270"/>
+            <point key="canvasLocation" x="294" y="-272"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="oM1-uO-ezE">
+            <objects>
+                <viewController id="AFe-R8-Rbk" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="EWg-g6-7bc"/>
+                        <viewControllerLayoutGuide type="bottom" id="ibw-5p-5ma"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="sLp-7z-FWk">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="c5p-u2-mRy">
+                                <rect key="frame" x="0.0" y="271" width="320" height="297"/>
+                            </mapView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZSU-1K-5bh">
+                                <rect key="frame" x="16" y="20" width="288" height="243"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wbb-wh-SCq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="724" y="-272"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="1S0-iz-gy5">
